FIX header z-index

--- a/Frontend/src/components/styles/header.css
+++ b/Frontend/src/components/styles/header.css
@@ -24,6 +24,7 @@ body {
   background-color: #FFA500;
   padding: 15px 20px;
   color: rgb(255, 255, 255);
+  z-index: 3;
 }
 
 .header-logo {
